crates/capsec/tests/compile_fail/capsec_std_wrong_cap.stderr
error[E0277]: the trait bound `Cap<capsec::NetConnect>: CapProvider<FsRead>` is not satisfied
 --> tests/compile_fail/capsec_std_wrong_cap.rs:8:55
  |
8 |     let _ = capsec::fs::read_to_string("/etc/passwd", &net_cap);
  |             --------------------------                ^^^^^^^^ the trait `CapProvider<FsRead>` is not implemented for `Cap<capsec::NetConnect>`
  |             |
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `CapProvider<P>`:
            `Cap<(Ambient, Ambient)>` implements `CapProvider<Ambient>`
            `Cap<(Ambient, EnvRead)>` implements `CapProvider<Ambient>`
            `Cap<(Ambient, EnvRead)>` implements `CapProvider<EnvRead>`
            `Cap<(Ambient, EnvWrite)>` implements `CapProvider<Ambient>`
            `Cap<(Ambient, EnvWrite)>` implements `CapProvider<EnvWrite>`
            `Cap<(Ambient, FsAll)>` implements `CapProvider<Ambient>`
            `Cap<(Ambient, FsAll)>` implements `CapProvider<FsAll>`
            `Cap<(Ambient, FsRead)>` implements `CapProvider<Ambient>`
          and $N others
note: required by a bound in `capsec::fs::read_to_string`
 --> $WORKSPACE/crates/capsec-std/src/fs.rs
  |
  | pub fn read_to_string(
  |        -------------- required by a bound in this function
  |     path: impl AsRef<Path>,
  |     cap: &impl CapProvider<FsRead>,
  |                ^^^^^^^^^^^^^^^^^^^ required by this bound in `read_to_string`
